--- a/Dairy_Care_System/templates/ordersummary.html
+++ b/Dairy_Care_System/templates/ordersummary.html
@@ -165,6 +165,7 @@
         </div>
 
         <div class="details">
+            <p><strong>Invoice Number:</strong> {{ order.id }}</p>
             <p><strong>Name:</strong> {{ order.name }}</p>
             <p><strong>Contact:</strong> {{ order.phone }}</p>
             <p><strong>Email:</strong> {{ order.email }}</p>
