--- a/Dairy_Care_System/dairy/static/css/adminpage.css
+++ b/Dairy_Care_System/dairy/static/css/adminpage.css
@@ -29,7 +29,22 @@ ul {
 .header {
     display: flex;
     align-items: center;
-    margin-right: 20px;
+    justify-content: space-between;
+    
+    padding: 5px 10px;
+    color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.header h1 {
+    font-size: 24px;
+    margin: 0;
+}
+
+.header .username {
+    font-size: 25px;
+    color: #ecf0f1;
+    cursor: pointer;
 }
 
 .nav-item {
@@ -59,30 +74,18 @@ li a:hover {
     border-radius: 5px;
 }
 
-h1 {
-    color: black;
-    font-size: 60px;
-    margin-top: 100px;
-}
-
-h3 {
-    color: black;
-    font-size: 30px;
-    margin-left: 10px;
-}
-
-
 /* Dropdown styles */
 .dropdown-content {
     display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
+    position: fixed;
+    background-color: white;
+    min-width: 130px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    right: 0;
-    top: 70px;
-    border-radius: 5px;
+    z-index: 1001;
+    right: 20px;
+    top: 60px;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .dropdown-content a {
@@ -91,69 +94,46 @@ h3 {
     text-decoration: none;
     display: block;
     text-align: left;
+    font-size: 20px;
+    transition: background-color 0.3s ease;
 }
 
 .dropdown-content a:hover {
-    background-color: #ddd;
+    background-color: #ebebeb;
+    color: #000;
 }
 
 .nav-item:hover .dropdown-content {
     display: block;
 }
 
-.message {
-    font-size: 30px;
-    color: #000;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.quote {
-    font-style: italic;
-    font-size: 20px;
-    color: black;
-    text-align: center;
-    margin-top: 10px;
-}
-
-.quote::before {
-    content: "“";
-}
-
-.quote::after {
-    content: "”";
-}
-
-footer {
-    text-align: center;
-    margin-top: 20px;
-    color: black;
-}
-
 /* Side navigation (Always Visible) */
 .sidenav {
-    height: 100%; /* Full-height */
-    width: 100px; /* Fixed width to keep the sidebar always visible */
-    position: fixed; /* Fixed position */
-    z-index: 1; /* Sit on top */
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
     backdrop-filter: blur(10px); /* Blur effect */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px; /* Padding on top */
+    overflow-x: hidden;
+    padding-top: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .sidenav a {
-    padding: 8px 8px 15px 20px;
+    padding: 13px 20px;
     text-decoration: none;
-    font-size: 25px;
-    color: #ffffff;
+    font-size: 20px;
+    color: #ecf0f1;
     display: block;
     transition: 0.3s;
+    border-radius: 5px;
 }
 
 .sidenav a:hover {
+    background-color: #c8c8c8;
     color: #000000;
 }
 
