--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -12,6 +12,47 @@
             margin-left: 250px; /* Adjusting body margin to make space for the fixed sidebar */
         }
 
+        h1 {
+            color: black;
+            font-size: 60px;
+            margin-top: 100px;
+        }
+
+        h3 {
+            color: black;
+            font-size: 30px;
+            margin-left: 10px;
+        }
+
+        .message {
+            font-size: 30px;
+            color: #000;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .quote {
+            font-style: italic;
+            font-size: 20px;
+            color: black;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .quote::before {
+            content: "“";
+        }
+
+        .quote::after {
+            content: "”";
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            color: black;
+        }
+
         /* Notification badge styles */
         .notification-badge {
             position: relative;
