--- a/Dairy_Care_System/templates/preorderfarm.html
+++ b/Dairy_Care_System/templates/preorderfarm.html
@@ -106,11 +106,12 @@
 
 <body>
     <!-- Side Navigation (Always Visible) -->
-    <div id="mySidenav" class="sidenav"><br><br><br>
+    <div id="mySidenav" class="sidenav"><br><br>
         <a href="{% url 'productslist' %}" id="product"><i class="fas fa-shopping-basket"></i>  Products List</a>
-        <a href="{% url 'addproducts' %}" style="padding-left: 50px; font-size: 1.3em;"><i class="fa fa-cart-plus"></i> Add Product</a><br>
-        <a href="{% url 'animalslist' %}" id="animal"><i class="fas fa-paw"></i>  Animals List</a>
-        <a href="{% url 'addanimal' %}" style="padding-left: 50px; font-size: 1.3em;"><i class="fas fa-plus-circle"></i> Add Animal</a><br>
+        <a href="{% url 'addproducts' %}" style="padding-left: 30px; font-size: 1.2em;"><i class="fa fa-cart-plus"></i>Add Product</a><br>
+        <a href="{% url 'animalslist' %}" id="animal"><i class="fas fa-paw"></i>Animals List</a>
+        <a href="{% url 'addanimal' %}" style="padding-left: 30px; font-size: 1.2em;"><i class="fas fa-plus-circle"></i>Add Animal</a><br>
+        <a href="{% url 'diseasedetection' %}" style="padding-left: 30px; font-size: 1.2em;"><i class="fas fa-heartbeat"></i>Health Checker</a><br>
         <a href="{% url 'orderdetails' %}"><i class="fas fa-shopping-bag"></i>  Order Details</a><br>
         <a href="{% url 'milkdetails' %}"><i class="fas fa-clipboard-list"></i>  Pre-Order Details</a><br>
         <a href="{% url 'milkdetails' %}"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
